# volto-templates

./: .eslintrc.js  .gitignore  LICENSE  LICENSE.md  Makefile  README.md  ReadMe.md  mrs.developer.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  towncrier.toml  volto.config.js
.github/workflows/: changelog.yml  code.yml
.storybook/: main.js
dockerfiles/: Dockerfile
docs/: LICENSE.md  README.md  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
locales/: volto.pot
locales/de/LC_MESSAGES/: volto.po
locales/en/LC_MESSAGES/: volto.po
src/: TemplateAdd.jsx  TemplateEdit.jsx  index.js  messages.js
src/actions/: index.js
src/actions/selectable-templates/: index.js
src/actions/showTemplatesModal/: index.js
src/actions/templateContainer/: index.js
src/actions/templateThumbnail/: index.js  index.ts
src/actions/templates/: index.js
src/actions/thumbnailCreation/: index.js
src/appextras/: TemplatesEdit.jsx  TemplatesScreenshot.jsx  TemplatesToolbar.jsx
src/components/manage/Add/: Add.jsx
src/components/manage/Edit/: Edit.jsx
src/components/manage/Toolbar/: Toolbar.jsx  (+2 more)
src/components/modal/: TemplateModal.jsx
src/constants/: ActionTypes.js
src/helpers/: index.js
src/hoc/: withScreenshot.jsx
src/hooks/: useBlocker.jsx  useModalKeyHandler.js  useRouteChange.jsx
src/middlewares/: templates_thumbnail.js
src/modals/: CreateTemplateModal.jsx  SelectTemplateModal.jsx
src/reducers/: index.js
src/reducers/selectable-templates/: index.js
src/reducers/showTemplatesModal/: index.js
src/reducers/templateContainer/: index.js
src/reducers/templateThumbnail/: index.js
src/reducers/templates/: index.js
src/reducers/thumbnailCreation/: index.js
src/theme/: template-modal.scss
(+11 files in other folders)
